@startuml

entity "Users" as Users {
    * id : UUID
    --
    * name : String
    * email : String
    * password : String
    * role : Enum {Admin, Organizer, User}
    --
    * created_at : Timestamp
    * updated_at : Timestamp
}

entity "Events" as Events {
    * id : UUID
    --
    * name : String
    * description : Text
    * date_time : Timestamp
    * location : String
    --
    * created_by : UUID [FK to Users.id]
    * created_at : Timestamp
    * updated_at : Timestamp
}

entity "Bookings" as Bookings {
    * id : UUID
    --
    * status : Enum {Pending, Active, Canceled}
    * user_id : UUID [FK to Users.id]
    --
    * created_at : Timestamp
    * updated_at : Timestamp
}

entity "BookingDetails" as BookingDetails {
    * id : UUID
    --
    * booking_id : UUID [FK to Bookings.id]
    * ticket_id : UUID [FK to Tickets.id]
    * ticket_code : String
    * name : String
    * email : String
    * gender : Enum {Male, Female}
    --
    * created_at : Timestamp
    * updated_at : Timestamp
}

entity "Tickets" as Tickets {
    * id : UUID
    --
    * event_id : UUID [FK to Events.id]
    * description : Text
    * type : String
    * price : Decimal
    * quota : Integer
    --
    * created_at : Timestamp
    * updated_at : Timestamp
}

entity "Favorites" as Favorites {
    * id : UUID
    --
    * user_id : UUID [FK to Users.id]
    * event_id : UUID [FK to Events.id]
    --
    * created_at : Timestamp
}

Users ||--o{ Events : "Creates"
Users ||--o{ Bookings : "Makes"
Bookings ||--|{ BookingDetails : "Has"
Tickets ||--o{ BookingDetails : "Is For"
Events ||--o{ Tickets : "Offers"
Users ||--o{ Favorites : "Marks"
Events ||--o{ Favorites : "Is Marked By"

@enduml
